Compiler/calcParser.py
# Generated from calc.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class calcParser ( Parser ):

    grammarFileName = "calc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'printf'", "'='", "'&'", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "';'", "'+'", "'-'", "'*'", 
                     "'/'", "'<'", "'>'", "'=='", "'&&'", "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "RESERVED", "ID", "LPAREN", "RPAREN", "SEMICOLON", 
                      "PLUS", "MINUS", "MUL", "DIV", "LT", "GT", "EQ", "AND", 
                      "OR", "NOT", "FLOAT", "INT", "DIGIT", "ML_COMMENT", 
                      "SL_COMMENT", "WS" ]

    RULE_start = 0
    RULE_expression = 1
    RULE_printf = 2
    RULE_pointer = 3
    RULE_declaration = 4
    RULE_assignment = 5
    RULE_relOperation = 6
    RULE_logicOperation = 7
    RULE_unaryOperation = 8
    RULE_var = 9
    RULE_number = 10

    ruleNames =  [ "start", "expression", "printf", "pointer", "declaration", 
                   "assignment", "relOperation", "logicOperation", "unaryOperation", 
                   "var", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    RESERVED=4
    ID=5
    LPAREN=6
    RPAREN=7
    SEMICOLON=8
    PLUS=9
    MINUS=10
    MUL=11
    DIV=12
    LT=13
    GT=14
    EQ=15
    AND=16
    OR=17
    NOT=18
    FLOAT=19
    INT=20
    DIGIT=21
    ML_COMMENT=22
    SL_COMMENT=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(calcParser.EOF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calcParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(calcParser.ExpressionContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(calcParser.SEMICOLON)
            else:
                return self.getToken(calcParser.SEMICOLON, i)

        def getRuleIndex(self):
            return calcParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = calcParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << calcParser.T__0) | (1 << calcParser.T__2) | (1 << calcParser.RESERVED) | (1 << calcParser.ID) | (1 << calcParser.LPAREN) | (1 << calcParser.PLUS) | (1 << calcParser.MINUS) | (1 << calcParser.MUL) | (1 << calcParser.NOT) | (1 << calcParser.FLOAT) | (1 << calcParser.INT))) != 0):
                self.state = 22
                self.expression(0)
                self.state = 23
                self.match(calcParser.SEMICOLON)
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(calcParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return calcParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NumberExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(calcParser.NumberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExp" ):
                listener.enterNumberExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExp" ):
                listener.exitNumberExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExp" ):
                return visitor.visitNumberExp(self)
            else:
                return visitor.visitChildren(self)


    class VadExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(calcParser.VarContext,0)

        def declaration(self):
            return self.getTypedRuleContext(calcParser.DeclarationContext,0)

        def assignment(self):
            return self.getTypedRuleContext(calcParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVadExp" ):
                listener.enterVadExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVadExp" ):
                listener.exitVadExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVadExp" ):
                return visitor.visitVadExp(self)
            else:
                return visitor.visitChildren(self)


    class UnaryExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unaryOperation(self):
            return self.getTypedRuleContext(calcParser.UnaryOperationContext,0)

        def var(self):
            return self.getTypedRuleContext(calcParser.VarContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExp" ):
                listener.enterUnaryExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExp" ):
                listener.exitUnaryExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExp" ):
                return visitor.visitUnaryExp(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesesExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(calcParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(calcParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(calcParser.RPAREN, 0)
        def MINUS(self):
            return self.getToken(calcParser.MINUS, 0)
        def PLUS(self):
            return self.getToken(calcParser.PLUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesesExp" ):
                listener.enterParenthesesExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesesExp" ):
                listener.exitParenthesesExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesesExp" ):
                return visitor.visitParenthesesExp(self)
            else:
                return visitor.visitChildren(self)


    class PrintExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printf(self):
            return self.getTypedRuleContext(calcParser.PrintfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExp" ):
                listener.enterPrintExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExp" ):
                listener.exitPrintExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExp" ):
                return visitor.visitPrintExp(self)
            else:
                return visitor.visitChildren(self)


    class InfixExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calcParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(calcParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(calcParser.MUL, 0)
        def DIV(self):
            return self.getToken(calcParser.DIV, 0)
        def PLUS(self):
            return self.getToken(calcParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(calcParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfixExp" ):
                listener.enterInfixExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfixExp" ):
                listener.exitInfixExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfixExp" ):
                return visitor.visitInfixExp(self)
            else:
                return visitor.visitChildren(self)


    class RelogicExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calcParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calcParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(calcParser.ExpressionContext,i)

        def relOperation(self):
            return self.getTypedRuleContext(calcParser.RelOperationContext,0)

        def logicOperation(self):
            return self.getTypedRuleContext(calcParser.LogicOperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelogicExp" ):
                listener.enterRelogicExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelogicExp" ):
                listener.exitRelogicExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelogicExp" ):
                return visitor.visitRelogicExp(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = calcParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = calcParser.VadExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 36
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 33
                    self.var()
                    pass

                elif la_ == 2:
                    self.state = 34
                    self.declaration()
                    pass

                elif la_ == 3:
                    self.state = 35
                    self.assignment()
                    pass


                pass

            elif la_ == 2:
                localctx = calcParser.UnaryExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 38
                self.unaryOperation()
                self.state = 39
                self.var()
                pass

            elif la_ == 3:
                localctx = calcParser.ParenthesesExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==calcParser.PLUS or _la==calcParser.MINUS:
                    self.state = 41
                    _la = self._input.LA(1)
                    if not(_la==calcParser.PLUS or _la==calcParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 44
                self.match(calcParser.LPAREN)
                self.state = 45
                self.expression(0)
                self.state = 46
                self.match(calcParser.RPAREN)
                pass

            elif la_ == 4:
                localctx = calcParser.NumberExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 48
                self.number()
                pass

            elif la_ == 5:
                localctx = calcParser.PrintExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 49
                self.printf()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 65
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = calcParser.InfixExpContext(self, calcParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 52
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 53
                        _la = self._input.LA(1)
                        if not(_la==calcParser.MUL or _la==calcParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 54
                        self.expression(8)
                        pass

                    elif la_ == 2:
                        localctx = calcParser.InfixExpContext(self, calcParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 55
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 56
                        _la = self._input.LA(1)
                        if not(_la==calcParser.PLUS or _la==calcParser.MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 57
                        self.expression(7)
                        pass

                    elif la_ == 3:
                        localctx = calcParser.RelogicExpContext(self, calcParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 58
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 61
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [calcParser.LT, calcParser.GT, calcParser.EQ]:
                            self.state = 59
                            self.relOperation()
                            pass
                        elif token in [calcParser.AND, calcParser.OR]:
                            self.state = 60
                            self.logicOperation()
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 63
                        self.expression(5)
                        pass

             
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrintfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(calcParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(calcParser.RPAREN, 0)

        def var(self):
            return self.getTypedRuleContext(calcParser.VarContext,0)


        def number(self):
            return self.getTypedRuleContext(calcParser.NumberContext,0)


        def getRuleIndex(self):
            return calcParser.RULE_printf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf" ):
                listener.enterPrintf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf" ):
                listener.exitPrintf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf" ):
                return visitor.visitPrintf(self)
            else:
                return visitor.visitChildren(self)




    def printf(self):

        localctx = calcParser.PrintfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_printf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(calcParser.T__0)
            self.state = 71
            self.match(calcParser.LPAREN)
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 72
                self.var()
                pass

            elif la_ == 2:
                self.state = 73
                self.number()
                pass


            self.state = 76
            self.match(calcParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESERVED(self):
            return self.getToken(calcParser.RESERVED, 0)

        def MUL(self):
            return self.getToken(calcParser.MUL, 0)

        def getRuleIndex(self):
            return calcParser.RULE_pointer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer" ):
                listener.enterPointer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer" ):
                listener.exitPointer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)




    def pointer(self):

        localctx = calcParser.PointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pointer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(calcParser.RESERVED)
            self.state = 79
            self.match(calcParser.MUL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(calcParser.VarContext,0)


        def pointer(self):
            return self.getTypedRuleContext(calcParser.PointerContext,0)


        def RESERVED(self):
            return self.getToken(calcParser.RESERVED, 0)

        def getRuleIndex(self):
            return calcParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = calcParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 81
                self.pointer()

            elif la_ == 2:
                self.state = 82
                self.match(calcParser.RESERVED)


            self.state = 85
            self.var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(calcParser.ExpressionContext,0)


        def ID(self):
            return self.getToken(calcParser.ID, 0)

        def declaration(self):
            return self.getTypedRuleContext(calcParser.DeclarationContext,0)


        def getRuleIndex(self):
            return calcParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = calcParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 87
                self.match(calcParser.ID)
                pass

            elif la_ == 2:
                self.state = 88
                self.declaration()
                pass


            self.state = 91
            self.match(calcParser.T__1)
            self.state = 92
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(calcParser.LT, 0)

        def GT(self):
            return self.getToken(calcParser.GT, 0)

        def EQ(self):
            return self.getToken(calcParser.EQ, 0)

        def getRuleIndex(self):
            return calcParser.RULE_relOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelOperation" ):
                listener.enterRelOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelOperation" ):
                listener.exitRelOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelOperation" ):
                return visitor.visitRelOperation(self)
            else:
                return visitor.visitChildren(self)




    def relOperation(self):

        localctx = calcParser.RelOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_relOperation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << calcParser.LT) | (1 << calcParser.GT) | (1 << calcParser.EQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(calcParser.AND, 0)

        def OR(self):
            return self.getToken(calcParser.OR, 0)

        def getRuleIndex(self):
            return calcParser.RULE_logicOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicOperation" ):
                listener.enterLogicOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicOperation" ):
                listener.exitLogicOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicOperation" ):
                return visitor.visitLogicOperation(self)
            else:
                return visitor.visitChildren(self)




    def logicOperation(self):

        localctx = calcParser.LogicOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_logicOperation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not(_la==calcParser.AND or _la==calcParser.OR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(calcParser.NOT, 0)

        def MUL(self):
            return self.getToken(calcParser.MUL, 0)

        def getRuleIndex(self):
            return calcParser.RULE_unaryOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryOperation" ):
                listener.enterUnaryOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryOperation" ):
                listener.exitUnaryOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryOperation" ):
                return visitor.visitUnaryOperation(self)
            else:
                return visitor.visitChildren(self)




    def unaryOperation(self):

        localctx = calcParser.UnaryOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unaryOperation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << calcParser.T__2) | (1 << calcParser.MUL) | (1 << calcParser.NOT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(calcParser.ID, 0)

        def PLUS(self):
            return self.getToken(calcParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(calcParser.MINUS, 0)

        def getRuleIndex(self):
            return calcParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = calcParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==calcParser.PLUS or _la==calcParser.MINUS:
                self.state = 100
                _la = self._input.LA(1)
                if not(_la==calcParser.PLUS or _la==calcParser.MINUS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 103
            self.match(calcParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(calcParser.INT, 0)

        def FLOAT(self):
            return self.getToken(calcParser.FLOAT, 0)

        def PLUS(self):
            return self.getToken(calcParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(calcParser.MINUS, 0)

        def getRuleIndex(self):
            return calcParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = calcParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==calcParser.PLUS or _la==calcParser.MINUS:
                self.state = 105
                _la = self._input.LA(1)
                if not(_la==calcParser.PLUS or _la==calcParser.MINUS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

